# osf-hackathon-api

./: README.md  pyproject.toml
src/fileapi_package_THanksDev/: fileapi.py
src/fileapi_package_THanksDev/test/: example.py
