[project]
name = "fileapi_package_THanksDev"
version = "0.0.1"
authors = [
  { name="Ty Hanks", email="ty.hanks@protonmail.com" },
]
description = "An API for managing a online forum using disk-persistent storage and http requests"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TyHanks/osf-hackathon-api"
"Bug Tracker" = "https://github.com/TyHanks/osf-hackathon-api/issues"